--- a/public/index.html
+++ b/public/index.html
@@ -15,10 +15,10 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Mirrors // Entourage"
+      content="WORK WITH GRAND PIANO"
     />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Mirrors // Entourage</title>
+    <title>WORK WITH GRAND PIANO</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
